--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div class="cursor-light"></div>
     <div class="container">
         <header>
-            <h1>Tonner Bot</h1>
-            <p>Criado por Gus</p>
+            <h1>Tilia Bot</h1>
+            <p>Criado por Gus e Stein</p>
         </header>
 
         <section class="about">
             <div class="blur-background">
-                <h2>Sobre o Tonner</h2>
-                <p>Tonner é um bot desenvolvido em JavaScript utilizando a biblioteca Aoi.js. Ele foi criado para facilitar interações em servidores Discord, oferecendo comandos úteis e divertidos.</p>
+                <h2>Sobre o Tilia</h2>
+                <p>Sou á Tilia, prazer te conhecer! Sou desenvolvida pelo Gus e Stein, com o Framework NodeJS, junto da biblioteca: BotForge@1.4.0</p>
             </div>
         </section>
 
@@ -87,7 +87,7 @@
         </section>
 
         <footer>
-            <p>&copy; 2023 Tonner Bot. Criado por Gus.</p>
+            <p>&copy; 2023 Tilia Bot. Criado por Gus e Stein.</p>
         </footer>
     </div>
 
