--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <section class="about">
             <div class="blur-background">
-                <h2>Sobre o Tilia</h2>
+                <h2>Sobre a Tilia</h2>
                 <p>Sou á Tilia, prazer te conhecer! Sou desenvolvida pelo Gus e Stein, com o Framework NodeJS, junto da biblioteca: BotForge@1.4.0</p>
             </div>
         </section>
